--- a/app/globals.css
+++ b/app/globals.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+:root {
+	--rdp-accent-color: indigo;
+	--rdp-background-color: gray;
+}
+
+.selected-day {
+	background-color: blue !important;
+	color: white !important;
+}
